filtering fn added to buttons - all fn work properly

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="menu-items">
       <div class="wrapper">
-        <ul class="row space-between"></ul>
+        <ul class="row justify-center"></ul>
       </div>
     </div>
     <script src="assets/js/data.js"></script>
